infra/K8S/auction-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-service
spec:
  selector:
    matchLabels:
      app: auction-service
  template:
    metadata:
      labels:
        app: auction-service
    spec:
      containers:
      - name: auction-service
        image: arvisiljins/auction-service
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: auction-clusterip
spec:
  type: ClusterIP
  selector:
    app: auction-service
  ports:
  - port: 80
    targetPort: 80
    name: web
  - port: 7777
    targetPort: 7777
    name: grpc
