infra/K8S/biding-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biding-service
spec:
  selector:
    matchLabels:
      app: biding-service
  template:
    metadata:
      labels:
        app: biding-service
    spec:
      containers:
      - name: biding-service
        image: arvisiljins/biding-service
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: biding-clusterip
spec:
  type: ClusterIP
  selector:
    app: biding-service
  ports:
  - port: 80
    targetPort: 80
    name: web
