infra/K8S/gateway-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name: gateway-service
        image: arvisiljins/gateway-service
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-clusterip
spec:
  type: ClusterIP
  selector:
    app: gateway-service
  ports:
  - port: 80
    targetPort: 80
    name: web
