infra/K8S/notification-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: arvisiljins/notification-service
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: notification-clusterip
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
  - port: 80
    targetPort: 80
    name: web
