infra/K8S/search-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
spec:
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
       containers:
        - name: auction-service
          image: arvisiljins/auction-service
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: search-clusterip
spec:
  type: ClusterIP
  selector:
    app: search-service
  ports:
  - port: 80
    targetPort: 80
    name: web
