infra/K8S/webapp-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: arvisiljins/web-app
        imagePullPolicy: Never
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-clusterip
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
  - port: 3000
    targetPort: 3000
    name: web
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-lb
spec:
  type: LoadBalancer
  selector:
    app: webapp
  ports:
  - port: 3000
    targetPort: 3000
